--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -1,1 +1,25 @@
-<p>about works!</p>
+<section class="about__pages">
+  <h1 class="title">Rick and Morty GraphQL APP</h1>
+  <div class="about__container">
+    <p class="about__paragraph">
+      Rick and Morty is an American adult animated science fiction sitcom created by Justin Roiland and
+      Chris Enrich for Cartoon Network's late-night programming block Adult Swim. The series follows the
+      misadventures of cynical mad scientist Rick Sanchez and his good-hearted but fretful grandson Morty Smith
+      on a quest to discover the origin of Rick's hideous and scientific-algorithmic humanoid alien
+      counterpart, Morty's "alien" father.
+      The series premiered on March 23, 2013, on Adult Swim. The series is based on a collaboration between
+      Roiland and Chris Enrich, and was produced by Justin Roiland and Chris Enrich for Cartoon Network's late-night
+      programming block Adult Swim. The series is set in the fictional planet Dimension C-137, and follows the
+      adventures of Rick Sanchez and his family who live in the planet's city of Earth-C137.
+      The series is set in the fictional planet Dimension C-137, and follows the adventures of Rick Sanchez and
+      his family who live in the planet's city of Earth-C137.
+    </p>
+    <figure class="about__img">
+      <img src="/assets/imgs/web_dev.svg" alt="Web dev" class="about__picture" rel="preload" as="image" width="406"
+        height="306">
+    </figure>
+  </div>
+  <p class="about__copy">
+    Devloper <span class="text-white">Carlos Gallardo</span>
+  </p>
+</section>
