--- a/src/app/components/pages/episodes/apisodes.component.html
+++ b/src/app/components/pages/episodes/apisodes.component.html
@@ -1,1 +1,7 @@
-<p>apisodes works!</p>
+<section class="container">
+  <ul class="episodes__list">
+    <li *ngFor="let episode of episodes$ | async">
+      {{ episode.episode }} - {{ episode.name }}
+    </li>
+  </ul>
+</section>
