--- a/src/app/components/pages/characters/characters-list/characters-list.component.html
+++ b/src/app/components/pages/characters/characters-list/characters-list.component.html
@@ -1,3 +1,4 @@
-<section class="characters__list">
+<section class="characters__list" infiniteScroll (scrolled)="onScrollDown()">
   <app-characters-car *ngFor="let character of characters$ | async" [character]="character"></app-characters-car>
+  <button class="button" *ngIf="showButton" (click)="onScrollTop">⬆️</button>
 </section>
