--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap");
 
 *,
 *:before,
@@ -9,8 +9,9 @@
 }
 
 html {
-  font-family: 'RocknRoll One', sans-serif;
-  background-color: #5E2C99;
+  font-family: "RocknRoll One", sans-serif;
+  background-color: #5e2c99;
+  scroll-behavior: smooth;
 }
 
 ul {
@@ -27,7 +28,6 @@ a {
   margin: 0 auto;
 }
 
-
 section {
   height: 100vh;
 }
@@ -38,16 +38,15 @@ header {
 }
 
 nav {
-
   .menu__toggle {
     display: block;
     position: relative;
     top: 1px;
-    left: .4rem;
+    left: 0.4rem;
     z-index: 9;
     -webkit-user-select: none;
     user-select: none;
-    padding: .5rem;
+    padding: 0.5rem;
 
     input {
       display: block;
@@ -61,22 +60,22 @@ nav {
       z-index: 2;
       -webkit-touch-callout: none;
 
-      &:checked~span {
+      &:checked ~ span {
         opacity: 1;
         transform: rotate(45deg) translate(-2px, -1px);
         background: #232323;
       }
 
-      &:checked~span:nth-last-child(3) {
+      &:checked ~ span:nth-last-child(3) {
         opacity: 0;
         transform: rotate(0deg) scale(0.2, 0.2);
       }
 
-      &:checked~span:nth-last-child(2) {
+      &:checked ~ span:nth-last-child(2) {
         transform: rotate(-45deg) translate(0, -1px);
       }
 
-      &:checked~ul {
+      &:checked ~ ul {
         transform: none;
       }
     }
@@ -91,9 +90,8 @@ nav {
       border-radius: 3px;
       z-index: 1;
       transform-origin: 4px 0px;
-      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        opacity 0.55s ease;
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 
       &:first-child {
         transform-origin: 0% 0%;
@@ -104,7 +102,6 @@ nav {
       }
     }
   }
-
 
   ul.navbar {
     list-style: none;
@@ -121,7 +118,7 @@ nav {
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
 
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
     li {
       display: inline-block;
@@ -141,14 +138,13 @@ nav {
         color: #232323;
         font-weight: 800;
         text-transform: uppercase;
-        transition: all .5s ease;
+        transition: all 0.5s ease;
 
         &:hover {
           color: #fff;
           border-width: 0 0 4px;
           border-style: solid;
           border-color: grey;
-
 
           &:after {
             opacity: 1;
@@ -167,17 +163,17 @@ nav {
           margin: auto;
           width: 100%;
           height: 1px;
-          content: '.';
+          content: ".";
           color: transparent;
-          background: #8C43E6;
+          background: #8c43e6;
           visibility: none;
           opacity: 0;
           z-index: -1;
-          transition: all .5s;
+          transition: all 0.5s;
         }
 
         &:before {
-          transition: all .5s;
+          transition: all 0.5s;
         }
       }
     }
@@ -191,7 +187,8 @@ nav {
   align-items: center;
   margin-top: 1rem;
   height: 92.5vh;
-  background: url(/assets/imgs/404.jpeg) no-repeat center bottom, no-repeat center/cover, #5E2C99;
+  background: url(/assets/imgs/404.jpeg) no-repeat center bottom,
+    no-repeat center/cover, #5e2c99;
   animation: animationRotateIn linear 0.7s;
   animation-iteration-count: 1;
   transform-origin: 50% 50%;
@@ -279,7 +276,6 @@ nav {
   }
 }
 
-
 /*** SHARED ***/
 .center {
   text-align: center;
@@ -306,13 +302,12 @@ nav {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(74, 74, 74, .8);
+  background-color: rgba(74, 74, 74, 0.8);
   z-index: 10;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 
 /*** EPISODES ***/
 
@@ -322,10 +317,11 @@ ul.episodes__list {
   margin: 1.75rem 0;
   padding-left: 1rem;
 
-  >li {
+  > li {
     background: #fff;
     border-radius: 0 0.5rem 0.5rem 0.5rem;
-    box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05), 0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
+    box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05),
+      0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
     counter-increment: gradient-counter;
     min-height: 3rem;
     padding: 1rem 1rem 1rem 3rem;
@@ -333,9 +329,9 @@ ul.episodes__list {
 
     &::before,
     &::after {
-      background: linear-gradient(135deg, #8C43E6 0%, #5E2C99 100%);
+      background: linear-gradient(135deg, #8c43e6 0%, #5e2c99 100%);
       border-radius: 1rem 1rem 0 1rem;
-      content: '';
+      content: "";
       height: 3rem;
       left: -1rem;
       overflow: hidden;
@@ -345,11 +341,12 @@ ul.episodes__list {
     }
 
     &::before {
-      box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05), 0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
+      box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05),
+        0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
       content: counter(gradient-counter);
       color: #fff;
       display: flex;
-      font: 900 1.8em/1 'RocknRoll One';
+      font: 900 1.8em/1 "RocknRoll One";
       justify-content: flex-end;
       padding: 0.125em 0.25em;
       z-index: 1;
@@ -363,7 +360,7 @@ ul.episodes__list {
       -moz-box-shadow: 5px 5px 20px rgba(250, 246, 246, 0.5);
     }
 
-    +li {
+    + li {
       margin-top: 2rem;
     }
   }
@@ -382,12 +379,17 @@ ul.episodes__list {
 
   figure {
     height: 300px;
-    background: linear-gradient(90deg, rgba(73, 35, 120, 1) 0%, rgba(73, 35, 120, 1) 38%, rgba(73, 35, 120, 1) 100%);
+    background: linear-gradient(
+      90deg,
+      rgba(73, 35, 120, 1) 0%,
+      rgba(73, 35, 120, 1) 38%,
+      rgba(73, 35, 120, 1) 100%
+    );
   }
 
   ul {
     li {
-      padding: .4rem 0;
+      padding: 0.4rem 0;
       display: flex;
       justify-content: space-between;
       color: #09cdce;
@@ -398,12 +400,10 @@ ul.episodes__list {
         word-wrap: break-word;
         hyphens: auto;
       }
-
     }
   }
 
   .card__details {
-
     padding: 0 10px 10px;
     position: relative;
 
@@ -433,7 +433,7 @@ ul.episodes__list {
     position: absolute;
     width: 30px;
     height: 30px;
-    right: .4rem;
+    right: 0.4rem;
     opacity: 0.7;
     cursor: pointer;
   }
@@ -445,7 +445,6 @@ ul.episodes__list {
     -moz-box-shadow: 5px 5px 20px rgba(250, 246, 246, 0.5);
   }
 }
-
 
 /*** Media queries 500 px ***/
 
@@ -461,7 +460,7 @@ ul.episodes__list {
   }
 
   .card {
-    border: 5px solid rgba(255, 255, 255, 0.90);
+    border: 5px solid rgba(255, 255, 255, 0.9);
     box-shadow: 2px 2px 6px 0px rgba(255, 255, 255, 0.3);
     max-width: 100%;
 
