--- a/src/app/components/pages/characters/characters-details/characters-details.component.html
+++ b/src/app/components/pages/characters/characters-details/characters-details.component.html
@@ -1,1 +1,3 @@
-<p>characters-details works!</p>
+<section class="character__details">
+  <app-characters-car *ngIf="character$ | async as character" [character]="character"></app-characters-car>
+</section>
